# memobase

./: .gitignore  Changelog.md  ROADMAP.md  pyproject.toml  readme.md
.github/workflows/: publish.yaml
assets/: cli_demo.py
docs/experiments/900-chats/: run.py
docs/experiments/locomo-benchmark/: README.md
docs/site/: DOC.md  docs.json  features.mdx  introduction.mdx  openapi.json  quickstart.mdx
docs/site/features/: async_insert.mdx  context.mdx
docs/site/features/event/: event.mdx  event_search.mdx  event_summary.mdx  event_tag.mdx
docs/site/features/profile/: profile_filter.mdx  profile_search.mdx
docs/site/practices/: tips.mdx
docs/site/references/: local_config.mdx
docs/site/templates/: dify.mdx
src/client/memobase/: __init__.py
src/client/memobase-go/blob/: blob.go
src/client/memobase-go/core/: client.go  client_test.go  user.go  user_test.go
src/client/memobase-go/examples/: main.go
src/client/memobase-ts/: README.md  index.ts  jsr.json  package-lock.json  package.json  tsconfig.json
src/client/memobase-ts/src/: client.ts  error.ts  index.ts  network.ts  types.ts  user.ts
src/client/memobase-ts/tests/: user.test.ts
src/client/memobase/core/: async_entry.py  entry.py
src/server/: .env.example  docker-compose.yml  readme.md
src/server/api/: Dockerfile  api.py  api_docs.py  build_init_sql.py  entrypoint.sh  pyproject.toml  requirements.txt
src/server/api/memobase_server/: __init__.py  connectors.py  env.py  struct_logger.py  utils.py
src/server/api/tests/: conftest.py  test_api.py  test_auth.py  test_chat_modal.py  (+2 more)
(+65 files in other folders)
