[project]
name = "memobase"
version = "0.1.0"
description = "MemoBase client"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://example.com"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src/client"}
packages = ["memobase"]
